[project]
name = "hsck"
version = "0.2.0"
description = "海阔小程序 hsck 离线数据源采集工具"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.46",
]

[project.scripts]
hsck = "hsck.app:main"
check = "hsck._check:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hsck"]

[tool.uv]
managed = true

[tool.ty.environment]
python = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "W", "UP", "SIM", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
